--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 </tr>
                 <tr><td>1</td>
                     <td>personal website</td>
-                    <td><a href="resume.html" target="_blank">github 1</a></td>
+                    <td><a href="https://ranjithareddy09.github.io/19itr074_-web-tech/19ITR074%20.htm">github 1</a></td>
                 </tr>
                 <tr><td>2</td>
                     <td>form  creation</td>
-                    <td><a href="form/form.html" target="_blank">github 2</a></td>
+                    <td><a href="https://ranjithareddy09.github.io/19itr074_-web-tech/registration.htm">github 2</a></td>
                 </tr>
                 <tr><td>3</td>
                     <td>webpage</td>
-                    <td><a href="MCdonalds /index.html" target="_blank">github 3</a></td>
+                    <td><a href="https://ranjithareddy09.github.io/19itr074_-web-tech/webpage.html">github 3</a></td>
                 </tr>
             </table>
         </div>
