--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             #info {
                 border:2px solid black;
                 border-radius:12px;
-                background-color:#F3D0C9;
+                background-color:GREY;
                 text-align: center; 
             }
             table{
@@ -24,9 +24,7 @@
                 text-align:left;
                 background-color:pink;
              }
-             tr:hover {
-                 background-color:black;
-             }
+             
              .center {
                       margin-left: auto;
                       margin-right: auto;
