--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 </tr> 
                 <tr><td>4</td>
                     <td>website</td>
-                    <td><a href="https://github.com/Ranjithareddy09/19itr074_-web-tech/blob/main/website2.html">github 4</a></td>
+                    <td><a href="https://ranjithareddy09.github.io/19itr074_-web-tech/website2.html">github 4</a></td>
                 </tr> 
                 <tr><td>4</td>
                     <td>website</td>
-                    <td><a href="https://github.com/Ranjithareddy09/19itr074_-web-tech/blob/main/calculator.html">github 5</a></td>
+                    <td><a href="https://ranjithareddy09.github.io/19itr074_-web-tech/calculator.html">github 5</a></td>
                 </tr>
             </table>
         </div>
