--- a/website2.html
+++ b/website2.html
@@ -9,7 +9,7 @@
     .navbar-brand{
       margin-left: 50px;
     }
-    .pic1{ background-image:url("bg.jpg");
+    .pic1{ background-image:url("sbg.jpg");
   height:800px;
 width:100%;}
   </style>
