--- a/website2.html
+++ b/website2.html
@@ -9,7 +9,8 @@
     .navbar-brand{
       margin-left: 50px;
     }
-    .pic1{ background-image:url("sbg.jpg");
+    .pic1{ background-image:url("bg.jpg"); 
+      background-repeat: no-repeat;
   height:800px;
 width:100%;}
   </style>
